<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="facebook_app_id">148768462261006</string>
    <string name="refresh_display">Refresh display</string>
    <string name="input_error">Please fill all fields before validation</string>

    <!-- Strings for menu_about -->
    <string name="app_name">UniTeam</string>
    <string name="about">About Us</string>

    <!-- Strings for activity_project_list -->
    <string name="project_list_label">Projects list</string>

    <!-- Strings for activity_about_us -->
    <string name="top">Who is Uniteam ?</string>
    <string name="bottom">We are 3 French students studying computer science…</string>

    <!-- Strings for activity_project_add_new -->
    <string name="title_activity_project_add">ProjectAdd</string>
    <string name="add_new_project">Add a new project</string>
    <string name="project_name_label">Project name</string>
    <string name="project_name_hint">My project</string>
    <string name="project_description">Project description</string>
    <string name="project_description_hint">My project is about…</string>

    <!-- Strings for activity_facebook_connect -->
    <string name="starting_line_1">Now introducing</string>
    <string name="starting_line_2">The project management app which makes your life easier !</string>
    <string name="project_button">View current projects</string>
    <string name="connection_successful">Connection successful</string>
    <string name="cancel_connection">Connection cancelled</string>
    <string name="connection_error">Connection failed</string>
    <string name="Uniteam_logo">UniTeam Logo</string>

    <!-- Strings for activity_project_presentation -->
    <string name="task_button_legend">Tasks</string>
    <string name="meetings_button_legend">Meetings</string>
    <string name="participants_button_legend">Participants</string>
    <string name="reports_button_legend">Reports</string>
    <string name="coming_soon">Coming soon !</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <!-- Strings for activity_kanban -->
    <string name="kanban">Kanban</string>
    <string name="todo_task_kanban">TODO</string>
    <string name="doing_task_kanban">DOING</string>
    <string name="done_task_kanban">DONE</string>

    <!-- Strings for activity_task_description -->
    <string name="task_description">Description</string>
    <string name="task_current_state">Current state</string>
    <string name="task_deadline">Deadline</string>
    <string name="task_duration">"Scheduled duration (number of hours)"</string>
    <string name="task_progress">Task progress</string>
    <string-array name="task_state">
        <item>TODO</item>
        <item>DOING</item>
        <item>DONE</item>
    </string-array>

    <!-- Strings for activity_task_add_new -->
    <string name="add_new_task">Add a new task</string>
    <string name="new_task_name">Name of the task</string>

    <!-- Strings for activity_meetings -->
    <string name="meetings_list">Upcoming meetings</string>

    <!-- Strings for activity_meeting_add_new -->
    <string name="meeting_add">Schedule a meeting</string>
    <string name="meeting_subject">Meeting subject</string>
    <string name="meeting_description">Description</string>
    <string name="meeting_date">Date</string>
    <string name="meeting_place">Place</string>
    <string name="meeting_reminder">Remind me</string>
    <string name="meeting_reminder2">minutes before</string>

    <!-- Strings for NotifyService -->
    <string name="notification_title">You have an upcoming meeting</string>

    <!-- Strings for activity_participants -->
    <string name="label_participants">List of project members :</string>

    <!-- Strings for activity_meeting_details -->
    <string name="meeting_details">Meeting details</string>
    <string name="label_reports">Reports list :</string>

</resources>
