<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_facebook_connect"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context="unidev.uniteam.FacebookConnect">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:text="@string/starting_line_1"
        android:textAlignment="center"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/app_name"
        android:paddingBottom="16dp"
        app:srcCompat="@drawable/im_uniteam_logo_text" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="32dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/starting_line_2"
        android:textAlignment="center"
        android:textSize="25sp" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="237dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/project_button"
        android:layout_width="237dp"
        android:layout_height="25dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/uniteamGreenDark"
        android:text="@string/project_button"
        android:textColor="@android:color/white"
        android:textSize="13sp" />

</LinearLayout>
