<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_task_kanban"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_horizontal_margin"
    tools:context="unidev.uniteam.TaskKanban">


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbarSize="4dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/todo_task_kanban"
                        android:textAlignment="center" />

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="2dip"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/uniteamGreenDark" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/task_kanban_todo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Button
                        android:text="Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/button2" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <View
                    android:layout_width="2dp"
                    android:layout_height="fill_parent"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/uniteamGreenDark" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/doing_task_kanban"
                            android:textAlignment="center" />

                        <View
                            android:layout_width="fill_parent"
                            android:layout_height="2dip"
                            android:layout_marginBottom="10dp"
                            android:layout_marginTop="10dp"
                            android:background="@color/uniteamGreenDark" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/task_kanban_doing"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <View
                    android:layout_width="2dp"
                    android:layout_height="fill_parent"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/uniteamGreenDark" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/done_task_kanban"
                            android:textAlignment="center" />

                        <View
                            android:layout_width="fill_parent"
                            android:layout_height="2dip"
                            android:layout_marginBottom="10dp"
                            android:layout_marginTop="10dp"
                            android:background="@color/uniteamGreenDark" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:id="@+id/task_kanban_done">

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </HorizontalScrollView>
</ScrollView>
